--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "homepage" : "http://GeorgeMichael74.github.io/Fliesenleger",
     "framer-motion": "^11.3.17",
+    "gh-pages": "^6.2.0",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
